--- a/src/frontend/emscripten/emscripten.html
+++ b/src/frontend/emscripten/emscripten.html
@@ -6,16 +6,16 @@
   <title>TotalGBA</title>
 
   <!-- for icons for all browsers -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0075c0">
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="manifest" href="./site.webmanifest">
+  <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#0075c0">
   <meta name="apple-mobile-web-app-title" content="TotalGBA">
   <meta name="application-name" content="TotalGBA">
   <meta name="msapplication-TileColor" content="#0075c0">
-  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+  <meta name="msapplication-TileImage" content="./mstile-144x144.png">
   <meta name="theme-color" content="#000000">
 
   <!-- fullscreen for chrome android when added to homescreen -->
